<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navHostFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:defaultNavHost="true"
        app:navGraph="@navigation/main_nav" />

    <LinearLayout
        android:id="@+id/llBottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:background="@color/highlightBackgroundColor">

        <LinearLayout
            android:id="@+id/btnInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_bottom_nav_bar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivInput"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:src="@drawable/ic_hehe"
                android:tint="@color/highlightIconColor" />

            <TextView
                android:id="@+id/tvInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_minus2sdp"
                android:gravity="center"
                android:text="@string/input"
                android:textColor="@color/highlightIconColor"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCalendar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_bottom_nav_bar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCalendar"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:src="@drawable/ic_hehe"
                android:tint="@color/defaultIconColor" />

            <TextView
                android:id="@+id/tvCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_minus2sdp"
                android:gravity="center"
                android:text="@string/calendar"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnReport"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_bottom_nav_bar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivReport"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:src="@drawable/ic_hehe"
                android:tint="@color/defaultIconColor" />

            <TextView
                android:id="@+id/tvReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_minus2sdp"
                android:gravity="center"
                android:text="@string/report"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSetting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_bottom_nav_bar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivSetting"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:src="@drawable/ic_hehe"
                android:tint="@color/defaultIconColor" />

            <TextView
                android:id="@+id/tvSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_minus2sdp"
                android:gravity="center"
                android:text="@string/setting"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>